--- a/zhyanTest-service-discovery-eureka-service/src/main/resources/application.yml
+++ b/zhyanTest-service-discovery-eureka-service/src/main/resources/application.yml
@@ -1,10 +1,10 @@
 
 eureka:
   instance:
-    hostname: peer1
+    hostname: localhost
   client:
     service-url:
-      defaultZone: http://peer2:8762/eureka/,http://peer1:8761/eureka/
+      defaultZone: http://localhost:8762/eureka/,http://localhost:8761/eureka/
     register-with-eureka: true
     fetch-registry: true
 
