--- a/zhyanTest-service-simple-provider-user/src/main/resources/application.yml
+++ b/zhyanTest-service-simple-provider-user/src/main/resources/application.yml
@@ -1,17 +1,24 @@
 server:
   port: 8000
+
+
+#https://www.jianshu.com/p/c23c82a8fcfc
 spring:
   application:
     name: zhyanTest-provider-user
+  datasource:
+    url: jdbc:mysql://localhost:3306/zhyanTest?createDatabaseIfNotExist=true&useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true&useSSL=false
+    username: root
+    password: root
   jpa:
-    generate-ddl: false
+    database: MySQL
+    database-platform: org.hibernate.dialect.MySQLDialect
     show-sql: true
     hibernate:
-      ddl-auto: none
-  datasource:                           # 指定数据源
-    platform: h2                        # 指定数据源类型
-    schema: classpath:schema.sql        # 指定h2数据库的建表脚本
-    data: classpath:data.sql            # 指定h2数据库的数据脚本
+      ddl-auto: update
+
+
+
 logging:                                # 配置日志级别，让hibernate打印出执行的SQL
   level:
     root: INFO
