增加了各个模块

--- a/zhyanTest-service-discovery-eureka-service/pom.xml
+++ b/zhyanTest-service-discovery-eureka-service/pom.xml
@@ -9,7 +9,7 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.zhyan</groupId>
-    <artifactId>eurekaservice</artifactId>
+    <artifactId>zhyanTest-service-discovery-eureka-service</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>eurekaservice</name>
     <description>Demo project for Spring Boot</description>
