--- a/zhyanTest-service-discovery-eureka-service-authenticating/pom.xml
+++ b/zhyanTest-service-discovery-eureka-service-authenticating/pom.xml
@@ -9,7 +9,7 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.zhyan</groupId>
-    <artifactId>eurekaauthenticating</artifactId>
+    <artifactId>zhyanTest-service-discovery-eureka-service-authenticating</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>eurekaauthenticating</name>
     <description>Demo project for Spring Boot</description>
