--- a/zhyanTest-service-discovery-eureka-service/src/main/resources/application.yml
+++ b/zhyanTest-service-discovery-eureka-service/src/main/resources/application.yml
@@ -4,10 +4,10 @@ eureka:
     hostname: localhost
   client:
     service-url:
-      defaultZone: http://localhost:8762/eureka/,http://localhost:8761/eureka/
+      defaultZone: http://localhost:8761/eureka/
     register-with-eureka: true
     fetch-registry: true
-
+#  http://peer2:8762/eureka/,
 
 spring:
   application:
