--- a/zhyanTest-service-simple-provider-user/src/main/resources/application.yml
+++ b/zhyanTest-service-simple-provider-user/src/main/resources/application.yml
@@ -1,38 +1,28 @@
 server:
   port: 8000
-
-
-#https://www.jianshu.com/p/c23c82a8fcfc
 spring:
   application:
     name: zhyanTest-provider-user
   datasource:
-    url: jdbc:oracle:thin:@192.168.1.112:1521:orcl?createDatabaseIfNotExist=true
+    url: jdbc:oracle:thin:@192.168.35.151:1521:orcl?createDatabaseIfNotExist=true
     username: c##root
     password: root
-  jpa:
+    jpa:
     database: Oracle
     database-platform: org.hibernate.dialect.Oracle10gDialect
     show-sql: true
     hibernate:
-      ddl-auto: update
-#
-#spring:
-#  application:
-#    name: zhyanTest-provider-user
-#  datasource:
-#    url: jdbc:mysql://localhost:3306/zhyanTest?createDatabaseIfNotExist=true&useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true&useSSL=false
-#    username: root
-#    password: root
+    ddl-auto: update
+
 #  jpa:
-#    database: MySQL
-#    database-platform: org.hibernate.dialect.MySQLDialect
+#    generate-ddl: false
 #    show-sql: true
 #    hibernate:
-#      ddl-auto: update
-
-
-
+#      ddl-auto: none
+#  datasource:                           # 指定数据源
+#    platform: h2                        # 指定数据源类型
+#    schema: classpath:schema.sql        # 指定h2数据库的建表脚本
+#    data: classpath:data.sql            # 指定h2数据库的数据脚本
 logging:                                # 配置日志级别，让hibernate打印出执行的SQL
   level:
     root: INFO
